repos/emily-python/contents/test/export/fail/let.em
# let and export not allowed together
# Expect failure

let export = 4
